src/infrastructure/k8s/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-read-timeout: "12h"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: frontend-ingress
  namespace: default
spec:
  rules:
    - host: swsp.com
    - http:
        paths:
          - path: /thd(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: technical-health-dashboard-clusterip-srv
                port:
                  number: 80
